# flashcards

./: .dockerignore  Dockerfile  LICENCE  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
cards/: models.py  tests.py  urls.py  views.py
cards/migrations/: 0001_initial.py
cards/templates/cards/: base.html  box.html  card.html  card_form.html  card_list.html  navigation.html
flashcards/: settings.py  urls.py
